tests/NormalTests/paczka1/small_fuzzy/72795563.err
Error in line 1: iAkaq S349 99,0
Error in line 3: iXTZq S349 39,7
Error in line 12: 9oo2Ib9bc1 S589 153,9
Error in line 14: 9oo2Ib9bc1 S349 62,5
